...
          ),
          SizedBox(height: 16.h),
          
          // Card Number
          CustomTextField(
            controller: _cardNumberController,
            hintText: 'Card Number',
            keyboardType: TextInputType.number,
            inputFormatters: [
              FilteringTextInputFormatter.digitsOnly,
              _CardNumberFormatter(),
            ],
            prefixIcon: Icons.credit_card,
          ),
          SizedBox(height: 12.h),
          
          // Card Holder Name
          CustomTextField(
            controller: _cardHolderController,
            hintText: 'Card Holder Name',
            textCapitalization: TextCapitalization.words,
            prefixIcon: Icons.person,
          ),
          SizedBox(height: 12.h),
          
          // Expiry and CVV Row
...
